--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "request": "^2.88.0"
   }
 }
