--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "uni-oth_mensa_api",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dotWee/uni-oth_mensa_api.git"
+  },
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
