--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "type": "git",
     "url": "https://github.com/dotWee/uni-oth_mensa_api.git"
   },
-  "main": "server.js",
+  "main": "lib/server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon lib/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lukas Wolfsteiner <lukas@wolfsteiner.de>",
@@ -17,7 +17,8 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "csv": "^3.1.0",
     "express": "^4.16.3",
-    "request": "^2.88.0"
+    "iconv-lite": "^0.4.24"
   }
 }
