--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "csv": "^3.1.0",
     "express": "^4.16.3",
     "iconv-lite": "^0.4.24"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "data/*"
+    ]
   }
 }
