Use nodemon runnable as independent script command

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "lib/server.js",
   "scripts": {
-    "start": "nodemon lib/server.js",
+    "start": "node lib/server.js",
+    "nodemon": "nodemon lib/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lukas Wolfsteiner <lukas@wolfsteiner.de>",
