--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lukas Wolfsteiner <lukas@wolfsteiner.de>",
-  "license": "MIT",
+  "license": "WTFPL",
   "devDependencies": {
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
