--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "express-swagger-generator": "^1.1.9",
     "nodemon": "^1.18.4"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "csv-parse": "^3.0.0",
     "express": "^4.16.3",
-    "iconv-lite": "^0.4.24"
+    "iconv-lite": "^0.4.24",
+    "swagger-ui-express": "^4.0.1"
   },
   "nodemonConfig": {
     "ignore": [
