--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "nodemon": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "nodemon": "nodemon src/server.js"
   },
   "author": "Lukas Wolfsteiner <lukas@wolfsteiner.media>",
   "license": "WTFPL",
@@ -18,6 +17,7 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
