Add swagger to package dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "swagger": "^0.7.5",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.7"
   },
