Update npm package dependencies

--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
   "author": "Lukas Wolfsteiner <lukas@wolfsteiner.media>",
   "license": "WTFPL",
   "devDependencies": {
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
-    "apollo-server-express": "^2.2.5",
-    "body-parser": "^1.18.3",
+    "apollo-server-express": "^2.6.8",
+    "body-parser": "^1.19.0",
     "csv-parse": "^3.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-graphql": "^0.7.1",
     "fs": "0.0.1-security",
-    "google-protobuf": "^3.6.1",
-    "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.3",
-    "grpc": "^1.17.0-pre1",
+    "google-protobuf": "^3.8.0",
+    "graphql": "^14.4.2",
+    "graphql-tools": "^4.0.5",
+    "grpc": "^1.22.2",
     "iconv-lite": "^0.4.24",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
     "minimist": "^1.2.0",
     "path": "^0.12.7",
-    "swagger-ui-express": "^4.0.1",
+    "swagger-ui-express": "^4.0.7",
     "yamljs": "^0.3.0"
   },
   "nodemonConfig": {
